--- a/site pessoal/index.html.html
+++ b/site pessoal/index.html.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylepessoal.css">
-    <title>Larissa Lima - Página Pessoal</title>
+    <title>Priscils Lima - Página Pessoal</title>
 
 </head>
 
