--- a/site pessoal/index.html.html
+++ b/site pessoal/index.html.html
@@ -29,18 +29,18 @@
     <h2 class="cursos">Cursos e especializações</h2>
     <ul type = "square">
         <li>Cursando Análise e Desenvolvimento de Sistemas</li>
-        <li>Experiência com aulas de inglês</li>
-        <li>Experiência com atendimento ao cliente</li>
-        <li>Inglês avançado</li>
+        <li>Formada em Ciências Contábeis</li>
+        <li>Atuação como Gerente Financeira e Contábil</li>
+        <li>Atuação como Implantadora de Software</li>
     </ul>
     
     
     <h2 class="hobbies">Meus hobbies</h2>
     <ul>
+        <li>Ler</li>
+        <li>Estudar</li>
+        <li>Estar em Familia</li>
         <li>Viajar</li>
-        <li>Fotografia</li>
-        <li>Ir à praia</li>
-        <li>Jogos de tabuleiro</li>
         </table>
         </h3>
     </ul>
@@ -49,13 +49,13 @@
     <nav>
     <ul>
         <li>Party.hub</li>
-        <li>Portfólio de <a href="https://www.instagram.com/lalinhosph">fotografia</li>
+        <li>Portfólio de <a href="https://www.instagram.com/eupris2">Instagram</li>
     </ul>
     </nav>
 </body>
 <footer class="rodape">
-    <a href="https://github.com/lalinhos">Github</a>  
-    <a href="https://www.linkedin.com/in/larissa-lima-679018217/">Linkedin</a>  
+    <a href="https://github.com/PriscilaMdeLima">Github</a>  
+    <a href="https://www.linkedin.com/in/priscila-maciel-de-lima-255a94190">Linkedin</a>  
 </footer>
 
 </html>
