--- a/site pessoal/index.html.html
+++ b/site pessoal/index.html.html
@@ -11,7 +11,7 @@
 <body>
     <table>
         <tr>
-            <td> <img class="img" src="/WhatsApp Image 2024-04-08 at 19.03.16.jpeg" alt="imagem do perfil de larissa" width="380" height="500"> </td>
+            <td> <img class="img" src="/WhatsApp Image 2024-04-08 at 19.03.16.jpeg" alt="imagem do perfil de priscila" width="380" height="500"> </td>
             <td> <h1>Priscila Maciel de Lima</h1>
                 
                 <p><i>Estudante na <strong>Cesar School</strong></i></p>
