--- a/site pessoal/index.html.html
+++ b/site pessoal/index.html.html
@@ -49,7 +49,7 @@
     <nav>
     <ul>
         <li>Party.hub</li>
-        <li>Portfólio de <a href="https://www.instagram.com/eupris2">Instagram</li>
+        <li>Pagina Pessoal <a href="https://www.instagram.com/eupris2">Instagram</li>
     </ul>
     </nav>
 </body>
